--- a/installers_reg.html
+++ b/installers_reg.html
@@ -375,8 +375,8 @@ textarea.addEventListener('input', () => {
 <!-- Success Message and Upload Instructions -->
         <div class="container">
             <div id="uploadInstructions" style="display: none;" class="mt-5">
-            <h3 style="color: red;">Details Saved</h3>
-            <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link under.</p>
+            <h3 style="color: red;">Details Saved!</h3>
+            <p>Your details have been saved successfully. To complete your registration, please upload the following required documents using the link below.</p>
             <ul>
                 <li>Picture showing your face (passport-style)</li>
                 <li>Picture at a solar installation site</li>
