--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Solar inverter systems, renewable energy, solar panels, clean energy solutions" name="keywords">
     <meta content="Tasha Solar provides cutting-edge solar inverter systems and renewable energy solutions to power your home and business efficiently." name="description">
-    <meta property="og:title" content="Solar Calculator: How much will it Cost you to Power your House? Find out!">
-    <meta property="og:description"content="Find out Cost of Solar Inverter System for your energy need">
-    <meta property="og:image" content="https://cyberbillafrica.github.io/artisanshub/img/solar-calc.jpeg" />
+    <meta property="og:title" content="Tasha Solar: Solar Inverter Systems, Sales and Installation">
+    <meta property="og:description"content="Tasha Solar provides cutting-edge solar inverter systems and renewable energy solutions to power your home and business efficiently">
+    <meta property="og:image" content="https://cyberbillafrica.github.io/tasha/img/tasha-logo.jpeg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://cyberbillafrica.github.io/artisanshub/solar.html" />
+    <meta property="og:url" content="https://cyberbillafrica.github.io/tasha/index.html" />
     <meta property="og:type" content="website" />
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Solar Calculator: How much will it Cost you to Power your House? Find out!" />
-    <meta name="twitter:description" content="Calculate Your Solar Power System Requirement and Cost" />
-    <meta name="twitter:image" content="https://cyberbillafrica.github.io/artisanshub/img/solar-calc.jpeg" />
+    <meta name="twitter:title" content="Tasha Solar: Solar Inverter Systems, Sales and Installation" />
+    <meta name="twitter:description" content="Tasha Solar provides cutting-edge solar inverter systems and renewable energy solutions to power your home and business efficiently" />
+    <meta name="twitter:image" content="https://cyberbillafrica.github.io/tasha/img/tasha-logo.jpeg" />
 
     <!-- Favicon -->
     <link href="img/tasha-logo.jpeg" rel="icon">
