--- a/solar-calculator.html
+++ b/solar-calculator.html
@@ -125,8 +125,15 @@
     <!-- Page Header End -->
     
     <div class="container">
-        <h1 class="text-center" style="color: #26d48c;">Solar Inverter System Calculator</h1>
- 
+        
+	    <div>
+    <h5>Are you an Experienced Installer with Verifiable Projects completed and wish to work with us?</h5>
+    <div style="display: flex; justify-content: center;">
+        <a href="installers_reg.html"> <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register for Jobs</button> </a>
+    </div>
+	 <hr>
+		    <h1 class="text-center" style="color: #26d48c;">Solar Inverter System Calculator</h1>
+   </div>
 	<!-- Share News Start-->
 <hr
 <h6 class="mt-4 mb-3 text-dark text-uppercase font-weight-bold">Share Calculator</h6>
