--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
                 <a href="project.html" class="nav-item nav-link">Projects</a>
                 <a href="solar-store.html" class="nav-item nav-link">Solar Store</a>
                 <a href="solar-calculator.html" class="nav-item nav-link" style="font-weight: bold; color: #26d48c;">Solar Calculator</a>
+                <a href="installers_portal.html" class="nav-item nav-link">Installers Portal</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="#quote" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="index.html/#quote" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
