--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <p><i class="fa fa-check-circle text-primary me-3"></i>High-efficiency solar inverters</p>
                     <p><i class="fa fa-check-circle text-primary me-3"></i>Expert installation and maintenance services</p>
                     <p><i class="fa fa-check-circle text-primary me-3"></i>Committed to sustainability and energy savings</p>
-                    <a href="#" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Learn More About Us</a>
+                    <a href="about.html" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Learn More About Us</a>
                 </div>
             </div>
         </div>
